# genomedigester

./: README.md  genome_analysis.py  hf_enzymes.fa  main.ipynb  pyproject.toml  test.ipynb  test_enzyme.fa  test_genome.fa
celegans/: main.ipynb  test_enzyme.fa
femtopulse/: femtoanalysis.ipynb
test/: test.ipynb  test_enzyme.fa  test_from_NCBI.ipynb  test_herring.ipynb
